src/objects/CascadingLevel__c.object
<CustomObject>
    <description>Represents a Level of a Cascading select question type.</description>
    <fields>
        <fullName>CascadingSelect__c</fullName>
        <description>The Cascading Select this level belongs to.</description>
        <label>Cascading Select</label>
        <referenceTo>CascadingSelect__c</referenceTo>
        <relationshipLabel>Cascading Levels</relationshipLabel>
        <relationshipName>Cascading_Levels</relationshipName>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ControllingLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Level object parent to this one.</description>
        <label>Controlling Level</label>
        <referenceTo>CascadingLevel__c</referenceTo>
        <relationshipLabel>Cascading Levels</relationshipLabel>
        <relationshipName>CascadingLevels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The Level Name</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <description>The Position of the select level</description>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cascading Level</label>
    <nameField>
    <displayFormat>CL-{00000000}</displayFormat>
        <label>Cascading Level Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cascading Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>